feat: Add Navbar Manager for dynamic navigation based on user authentication and roles; update relevant templates

--- a/app/frontend/templates/profile.html
+++ b/app/frontend/templates/profile.html
@@ -302,6 +302,7 @@
     <script src="/static/js/notification-manager.js"></script>
     <script src="/static/js/utils/form-validator.js"></script>
     <script src="/static/js/utils/storage-manager.js"></script>
+    <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/pages/profile.js"></script>
 </body>
 
