--- a/app/frontend/templates/buscar-candidatos.html
+++ b/app/frontend/templates/buscar-candidatos.html
@@ -636,6 +636,8 @@
     <script src="/static/js/api-client.js"></script>
     <script src="/static/js/auth-manager.js"></script>
     <script src="/static/js/notification-manager.js"></script>
+    <script src="/static/js/utils/storage-manager.js"></script>
+    <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/sidebar.js"></script>
     <script src="/static/js/pages/company-search.js"></script>
 </body>
