--- a/app/frontend/templates/dashboard.html
+++ b/app/frontend/templates/dashboard.html
@@ -203,6 +203,7 @@
     <script src="/static/js/auth-manager.js"></script>
     <script src="/static/js/notification-manager.js"></script>
     <script src="/static/js/utils/storage-manager.js"></script>
+    <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/pages/dashboard-role-adapter.js"></script>
     <script src="/static/js/pages/dashboard.js"></script>
 </body>
