--- a/app/frontend/templates/oportunidades.html
+++ b/app/frontend/templates/oportunidades.html
@@ -272,6 +272,11 @@
         </div>
     </footer>
 
+    <script src="/static/js/api-client.js"></script>
+    <script src="/static/js/auth-manager.js"></script>
+    <script src="/static/js/notification-manager.js"></script>
+    <script src="/static/js/utils/storage-manager.js"></script>
+    <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/sidebar.js"></script>
     <script src="/static/js/listings.js"></script>
 </body>
