feat: Add Navbar Manager script to dashboard, empresas, estudiantes, and index templates for dynamic navigation

--- a/app/frontend/templates/empresas.html
+++ b/app/frontend/templates/empresas.html
@@ -247,6 +247,7 @@
         </div>
     </footer>
 
+    <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/sidebar.js"></script>
     <script src="/static/js/listings.js"></script>
 </body>
