--- a/app/frontend/templates/estudiantes.html
+++ b/app/frontend/templates/estudiantes.html
@@ -263,6 +263,7 @@
         </div>
     </footer>
 
+    <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/sidebar.js"></script>
     <script src="/static/js/listings.js"></script>
 </body>
