--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -588,6 +588,7 @@
         </div>
     </div>
 
+    <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/sidebar.js"></script>
     <script src="/static/js/main.js"></script>
 </body>
