--- a/app/frontend/templates/student/estudiantes.html
+++ b/app/frontend/templates/student/estudiantes.html
@@ -263,8 +263,7 @@
     </footer>
 
     <script src="/static/js/navbar-manager.js"></script>
-    <script src="/static/js/sidebar.js"></script>
-    <script src="/static/js/listings.js"></script>
+    <script src="/static/js/pages/jobs-search.js"></script>
 </body>
 
 </html>
