--- a/app/frontend/templates/dashboard.html
+++ b/app/frontend/templates/dashboard.html
@@ -175,12 +175,15 @@
 
     <!-- Scripts -->
     <script src="/static/js/api-client.js"></script>
+    <script src="/static/js/utils/storage-manager.js"></script>
     <script src="/static/js/auth-manager.js"></script>
     <script src="/static/js/notification-manager.js"></script>
-    <script src="/static/js/utils/storage-manager.js"></script>
+    <script src="/static/js/protected-page-manager.js"></script>
     <script src="/static/js/navbar-manager.js"></script>
     <script src="/static/js/pages/dashboard-role-adapter.js"></script>
     <script src="/static/js/pages/dashboard.js"></script>
+    <!-- Test Suite -->
+    <script src="/static/js/test_javascript_cleanup_complete.js"></script>
 </body>
 
 </html>
