--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -587,8 +587,8 @@
         </div>
     </div>
 
+    <script src="/static/js/utils/storage-manager.js"></script>
     <script src="/static/js/navbar-manager.js"></script>
-    <script src="/static/js/sidebar.js"></script>
     <script src="/static/js/main.js"></script>
 </body>
 
